Fixed issues on mobile

--- a/src/App.css
+++ b/src/App.css
@@ -3,45 +3,6 @@
   position: relative;
 }
 
-.header {
-  position: relative;
-  background-color: black;
-  padding: 1%;
-
-  height: fit-content;
-
-}
-
-.header::before {
-  position: absolute;
-  content: " ";
-  width: 100%;
-  height: 0.8vh;
-  left: 0;
-  bottom: 0%;
-
-  background-image: linear-gradient(90deg,
-      #FF0000 0%,
-      #FF0000 10%,
-      #FF6F00 10%,
-      #FF6F00 20%,
-      #FFD700 20%,
-      #FFD700 30%,
-      #ADFF2F 30%,
-      #ADFF2F 40%,
-      #00FF00 40%,
-      #00FF00 50%,
-      #00FA9A 50%,
-      #00FA9A 60%,
-      #00bfff 60%,
-      #00BFFF 70%,
-      #1E90FF 70%,
-      #040506 80%,
-      #000000 80%,
-      #000000 90%,
-      #2c1111 90%,
-      #d3ac00 100%);
-}
 
 .sticky_header {
   color: aliceblue;
