--- a/src/components/routes/gallery/gallery.css
+++ b/src/components/routes/gallery/gallery.css
@@ -19,7 +19,7 @@
     justify-content: center;
     gap: 20px;
     padding: 0;
-    margin-left: 10vw;
+    margin-left: 1vw;
 }
 
 .video_container {
